6-configMap_secrets/cluster/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: fastapi-app
        image: fastapi-configmap:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
